@@ -132,13 +132,14 @@ void Game_clock::increment
 	set_time_palette();
 	Dead_body::decay(get_total_hours());
 	int new_3hour = hour/3;		// New 3-hour period.
-	if (new_3hour != old_3hour)	// In a new period?
+	int delta_3hour = new_3hour - old_3hour;
+	if (delta_3hour != 0)		// In a new period?
 					// Update NPC schedules.
-		gwin->schedule_npcs(new_3hour);
+		gwin->schedule_npcs(new_3hour, (delta_3hour - 1 + 8)%8);
 	}
 
 /*
- *	Animation.
+ *	Advance clock.
  */
 
 void Game_clock::handle_event
@@ -147,16 +148,10 @@ void Game_clock::handle_event
 	long udata			// ->game window.
 	)
 	{
-#if 0
-	static int first_day = 1, first_hour_passed = 0;
-#endif
 	Game_window *gwin = (Game_window *) udata;
 	if ((minute += time_factor) >= 60)// 1 real minute = 15 game minutes.
 		{
 		minute -= 60;
-#if 0
-		first_hour_passed = 1;
-#endif
 		if (++hour >= 24)
 			{
 			hour -= 24;
@@ -171,15 +166,6 @@ void Game_clock::handle_event
 			gwin->schedule_npcs(hour/3);
 			}
 		}
-#if 0
-	else if (first_day &&		// Set 6am schedules after start.
-		 (first_hour_passed || gwin->get_usecode()->get_global_flag(
-					Usecode_machine::found_stable_key)))
-		{
-		first_day = 0;
-		gwin->schedule_npcs(hour/3);
-		}
-#endif
 	cout << "Clock updated to " << hour << ':' << minute << endl;
 	curtime += 60*1000;		// Do it again in 60 seconds.
 	tqueue->add(curtime, this, udata);
